Removed nowrap white space from nav links due to issues with line breaking on mobile

--- a/master.css
+++ b/master.css
@@ -43,7 +43,6 @@ body {
     display: inline-block;
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
-    white-space: nowrap;
     width: auto;
 }
 
